add query correctness tests for Query1 and Query3 update TestGraph to contain elements necessary for testing Query1 and Query3 add IntegrationTest to test top-to-bottom running of load and transaction phases - needs more work separate "load" and "run" neo4j properties files, as they have different requirements