@@ -12,9 +12,7 @@ import com.ldbc.socialnet.workload.LdbcInteractiveWorkload;
 import com.ldbc.socialnet.workload.neo4j.utils.Config;
 
 /*
-sudo java -Xmx10G -cp ldbc_driver/core/target/core-0.1-SNAPSHOT.jar:target/neo4j_importer-0.1-SNAPSHOT.jar com.ldbc.driver.Client 
--oc 10 -rc -1 -tc 10 -s -tu MILLISECONDS -p neo4j.path=/var/neodata/ldbc/socialnet_small/ neo4j.dbtype=embedded 
--db com.ldbc.socialnet.workload.neo4j.Neo4jDb -w com.ldbc.socialnet.workload.LdbcInteractiveWorkload
+ sudo java -server -XX:+UseConcMarkSweepGC -Xmx16G -cp ldbc_driver/core/target/core-0.1-SNAPSHOT.jar:target/neo4j_importer-0.1-SNAPSHOT.jar com.ldbc.driver.Client -oc 10 -rc -1 -tc 1 -s -tu MILLISECONDS -p neo4j.path=/var/neodata/ldbc/neo4j_socialnet_50000_users_10_years_FIX_2_INDEX/neo4jdb/ neo4j.dbtype=embedded -db com.ldbc.socialnet.workload.neo4j.Neo4jDb -w com.ldbc.socialnet.workload.LdbcInteractiveWorkload
  */
 public class DoTransactionWorkload
 {
@@ -22,7 +20,7 @@ public class DoTransactionWorkload
     {
         long operationCount = 20;
         long recordCount = -1;
-        int threadCount = WorkloadParams.calculateDefaultThreadPoolSize();
+        int threadCount = 1;
         boolean showStatus = true;
         TimeUnit timeUnit = TimeUnit.MILLISECONDS;
         Map<String, String> userParams = new HashMap<String, String>();
